SET(LIB_NAME PhysicsLab)
SET(PLUGIN_HEADERS
    PhysicsLab.h
)

ADD_LIBRARY(${LIB_NAME}
    "SHARED"
    ${PLUGIN_HEADERS}
    PhysicsLab.cpp
)

FIND_PACKAGE(Bullet)
INCLUDE_DIRECTORIES(${BULLET_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${OSG_LIBRARIES})
TARGET_LINK_LIBRARIES(${LIB_NAME} ${BULLET_LIBRARIES})

ADD_CALVR_LIBRARIES(${LIB_NAME})

INSTALL(TARGETS ${LIB_NAME} DESTINATION lib/plugins)
